--- a/docs/04_solution_strategy.adoc
+++ b/docs/04_solution_strategy.adoc
@@ -9,9 +9,11 @@
 *** Material UI (MUI) como librería de React para la creación de componentes.
 ** Node JS como entorno de ejecución.
 ** Typescript como lenguaje de programación: MERN exige trabajar con JavaScript, pero Typescript añade una capa extra de tipado estático, que vendrá bien para prevenir errores.
-* SOLID para preservar la privacidad de los datos del usuario.
 * Github para el control de versiones.
 * Azure para el despliegue de la aplicación.
+* APIs para calcular el coste del envío
+** API de SHIPPO
+** Node Geocoder
 
 === Decisiones acerca de la descomposición a alto nivel
 Utilizaremos el Modelo-Vista-Controlador (MVC) como patrón principal, lo que nos permitirá separar la lógica de la presentación.
